Use relative URL.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <h1>Projects</h1>
     <ul>
         {% for proj in projects %}
-        <li><a href="/jobs?project={{ proj }}">{{ proj }}</a></li>
+        <li><a href="jobs?project={{ proj }}">{{ proj }}</a></li>
         {% endfor %}
     </ul>
 </body>
